Logo Header, Modal changes, and style updates.
Logo header has been added so now the site can have a logo. This will
only link to the index if it is not on the index. Logo header also has
some links that can be added to a ul similarly to the nav. these do not
display on smaller displays.

Modals now stay at a fixed position on the screen instead of staying at
the top of the screen they should now center in the window.

--- a/ToolbeltJS/styles.css
+++ b/ToolbeltJS/styles.css
@@ -167,7 +167,8 @@ figure img{
 	height:85%;
 	background-color:rgb(255,255,255);
 	opacity:0;
-	position: absolute;
+	
+	position: fixed;
 	margin-left: auto;
 	margin-right: auto;
 	left: 0;
@@ -289,6 +290,9 @@ figure img{
 	display:none;
 }
 @media screen and (max-width: 750px) {
+	.logo ul{
+		display:none;
+	}
 	.mobileNav{
 		z-index:100;
 		width:200px;
