--- a/ToolbeltJS/styles.css
+++ b/ToolbeltJS/styles.css
@@ -7,7 +7,7 @@ html{
 body{
 	background-color:white;
 	min-height: 100%;
-	
+
 }
 
 p{
@@ -58,8 +58,8 @@ img{
     max-width: 100%;
 	box-sizing: border-box;
     height: auto;
-	
-	
+
+
 }
 /*---------------------Form Styles-----------------------*/
 input[type=submit]{
@@ -110,7 +110,7 @@ figure img{
 	float:right;
 }
 .large{
-	float:left; 
+	float:left;
 	height:160px;
 }
 .my-gallery {
@@ -122,7 +122,7 @@ figure img{
 		display:block;
 		width:75%;
 		margin:auto;
-		
+
     }
 	figure img{
 		max-height:100%;
@@ -131,18 +131,18 @@ figure img{
 		margin-bottom:5px;
 		margin-left:auto;
 		display:block;
-		
+
 		float:none;
-	}	
-	
+	}
+
 	.small{
 		width:160px;
 		float:none;
 	}
 	.large{
-		float:none; 
+		float:none;
 		height:auto;
-	}	
+	}
 }
 
 /*--------------- BEGIN MODAL---------------------*/
@@ -155,7 +155,7 @@ figure img{
 	top:0;
 	display:none;
 	z-index:60;
-	
+
 }
 
 
@@ -168,7 +168,7 @@ figure img{
 	height:80%;
 	background-color:rgb(255,255,255);
 	opacity:0;
-	
+
 	position: fixed;
 	margin-left: auto;
 	margin-right: auto;
@@ -185,7 +185,7 @@ figure img{
 	background-color:rgba(0,0,0,0.5);
 }
 .toggleButton{
-	
+
 }
 .innerToggleButton{
 	margin-left:100%;
@@ -198,7 +198,7 @@ figure img{
 @media screen and (max-width: 840px) {
     #modalBox{
 		width:75%;
-		
+
     }
 }
 
@@ -284,7 +284,7 @@ figure img{
 	max-width:1150px;
 	padding-left:15%;
 	padding-right:15%;
-	
+
 }
 .mobileNav{
 	display:none;
@@ -334,7 +334,7 @@ figure img{
 		height: 25;
 		width: auto;
 		margin-top: 15px;
-		
+
 	}
 	.nav a{
 		display:none;
@@ -345,6 +345,9 @@ figure img{
 		display:inline-block;
 		width:170px;
 		color:white;
+	}
+	a.active{
+		height:16px;
 	}
 	p.showMore{
 		font-size:0.45em;
@@ -396,7 +399,7 @@ div.slider{
 .showMore{
 	font-size:0.75em;
 	color:white;
-	text-shadow: 2px 2px 10px #1a1a1a; 
+	text-shadow: 2px 2px 10px #1a1a1a;
 	float:right;
 }
 
@@ -405,4 +408,3 @@ div.slider{
 	border:3px solid white;
 	box-shadow:0 0 10px #a1a1a1;
 }
-
