correct cursors added updated radio buttons
you can click the label for the radio button to select it now. Also the
cursor changes to a pointer to show its clickable.
sliders also change the cursor so the user knows they are clickable.

--- a/ToolbeltJS/styles.css
+++ b/ToolbeltJS/styles.css
@@ -72,6 +72,9 @@ input[type=submit]{
 	font-size:1.25em;
 	padding-bottom:5px;
 }
+input[type=submit]:hover{
+	cursor: pointer;
+}
 input[type=text]{
 	width:250px;
 	height:30px;
@@ -87,6 +90,12 @@ input[type=email]{
 input[type=radio]{
 	font-family: 'Open Sans', sans-serif;
 
+}
+label:hover{
+	cursor: pointer;
+}
+input[type=radio]:hover{
+	cursor: pointer;
 }
 
 
@@ -378,6 +387,9 @@ figure img{
 	color:white;
 	border-radius:8px;
 }
+.sliderButton:hover{
+	cursor: pointer;
+}
 .slider{
 
 	overflow: hidden;
@@ -395,6 +407,9 @@ figure img{
 }
 div.slider{
 	#display:none;
+}
+div.slider:hover {
+    cursor: initial;
 }
 .showMore{
 	font-size:0.75em;
