--- a/ToolbeltJS/styles.css
+++ b/ToolbeltJS/styles.css
@@ -1,4 +1,17 @@
 /*Normal styles*/
+:root{
+	font-size: 16px;
+}
+@media screen and (max-width: 750px) {
+	:root{
+		font-size: 18px;
+	}
+}
+@font-face {
+    font-family: adamCG;
+    src: url(includes/fonts/ADAMCG.otf);
+}
+
 html{
 	background-color:white;
 	position: absolute; top: 0; bottom: 0; left: 0; right: 0;
@@ -11,12 +24,9 @@ body{
 }
 
 p{
+	font-size: 1rem;
 	font-family: 'Open Sans', sans-serif;
 	line-height:1.5;
-}
-@font-face {
-    font-family: adamCG;
-    src: url(includes/fonts/ADAMCG.otf);
 }
 a{
 	font-family: 'Open Sans', sans-serif;
@@ -25,6 +35,8 @@ a{
 #container{
 	max-width:1150px;
 	margin-top:20px;
+	width: 70%;
+	margin:auto;
 }
 u{
 	font-style:underline;
@@ -36,22 +48,23 @@ strong{
 	font-weight:800;
 }
 h1{
-	font-size:3em;
-	font-family: 'adamCG', sans-serif;
-	font-weight:light;
+	font-size:2.5rem;
+	font-family: 'Bree Serif', sans-serif;
 	margin:10px 0 10px 0;
+	color: #4799B6
 }
 h2{
-	font-size:2.5em;
-	font-family: 'adamCG', sans-serif;
-	font-weight:light;
+	font-size:2.0rem;
+	font-family: 'Bree Serif', sans-serif;
 	margin:10px 0 10px 0;
+	color: #4799B6
 }
 h3{
-	font-size:1.5em;
-	font-family: 'adamCG', sans-serif;
+	font-size:1.5rem;
+	font-family: 'Bree Serif', sans-serif;
 	font-weight:light;
 	margin:10px 0 10px 0;
+	color: #4799B6
 }
 img{
 	position:relative;
@@ -314,8 +327,61 @@ figure img{
 
 
 
+/*slider*/
+.sliderButton{
+	font-size: 1.18rem;
+	height: auto;
+	box-shadow:5px 3px 10px #b6b6b6;
+	background-color:#cc8800;
+	padding:5px;
+	margin:10px 0;
+	width:auto;
+	color:white;
+	border-radius:8px;
+}
+.sliderButton:hover{
+	cursor: pointer;
+}
+.slider{
+
+	overflow: hidden;
+	font-family: 'Open Sans', sans-serif;
+	height:auto;
+	color:black;
+	background-color:#fff;
+	border-style: solid;
+  border-color: gray;
+	border-width:1px;
+	margin-top:5px;
+	display: block;
+	padding:5px;
+	border-radius: 0 0 8px 8px;
+}
+div.slider{
+	#display:none;
+}
+div.slider:hover {
+    cursor: initial;
+}
+.showMore{
+	font-size:0.75em;
+	color:white;
+	text-shadow: 2px 2px 10px #1a1a1a;
+	float:right;
+}
+
+/*FancyIMG*/
+.fancyIMG{
+	border:3px solid white;
+	box-shadow:0 0 10px #a1a1a1;
+}
+
+
 /*Mobile Media query*/
 @media screen and (max-width: 750px) {
+	h1{
+		font-size: 2rem;
+	}
 	.logo ul{
 		display:none;
 	}
@@ -359,7 +425,7 @@ figure img{
 		height:16px;
 	}
 	p.showMore{
-		font-size:0.45em;
+		font-size:0.5rem;
 	}
 	.sideBox{
 		display:none;
@@ -370,56 +436,7 @@ figure img{
 	.hasSideBox{
 		width:100%;
 	}
-}
-
-
-
-
-
-/*slider*/
-.sliderButton{
-	height: auto;
-	box-shadow:5px 3px 10px #a1a1a1;
-	background-color:#cc8800;
-	padding:5px;
-	margin:10px;
-	width:auto;
-	color:white;
-	border-radius:8px;
-}
-.sliderButton:hover{
-	cursor: pointer;
-}
-.slider{
-
-	overflow: hidden;
-	font-family: 'Open Sans', sans-serif;
-	height:auto;
-	color:black;
-	background-color:#fff;
-	border-style: solid;
-    border-color: gray;
-	border-width:1px;
-	margin-top:5px;
-	display: block;
-	padding:5px;
-	border-radius: 0 0 8px 8px;
-}
-div.slider{
-	#display:none;
-}
-div.slider:hover {
-    cursor: initial;
-}
-.showMore{
-	font-size:0.75em;
-	color:white;
-	text-shadow: 2px 2px 10px #1a1a1a;
-	float:right;
-}
-
-/*FancyIMG*/
-.fancyIMG{
-	border:3px solid white;
-	box-shadow:0 0 10px #a1a1a1;
+	.sliderButton{
+		font-size: 0.75rem;
+	}
 }
